# contact_before_motion

./: CMakeLists.txt  package.xml
include/contact_before_motion/: contact_graph.h  contact_node.h  contact_state.h  util.h
src/: contact_before_motion.cpp  util.cpp
