<?xml version="1.0"?>
<package format="2">
  <name>contact_before_motion</name>
  <version>0.0.0</version>
  <description>The contact_before_motion package</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>graph_search</depend>
  <depend>choreonoid</depend>
  <depend>prioritized_inverse_kinematics_solver2</depend>
  <depend>global_inverse_kinematics_solver</depend>
  <depend>ik_constraint2_scfr</depend>
  <depend>ik_constraint2_distance_field</depend>
  <depend>ik_constraint2_bullet</depend>
  <depend>ik_constraint2_body_contact</depend>
  <depend>choreonoid_contact_candidate_generator</depend>

</package>
